# bci_ssvep_openvibe_ros

./: .gitignore  .gitmodules  README.md
OpenVibe/: .gitignore  CSP-training-harm.xml  acquisition-test.xml  classifier-training-harm.xml  harm-all.sh  harmAll_auto.sh  online-4-stim.mxs  online-test-4-stim.mxs  ov2csv.xml  perf-measure-harm.mxs  show-stims.mxs  ssvep-configuration.mxs  ssvep-configuration.xml  training-acquisition.mxs  training-acquisition.xml
OpenVibe/classifiers/: Readme.txt  classifier-1.cfg  classifier-2.cfg  classifier-3.cfg  classifier-4.cfg  csp-1.cfg  csp-1h1.cfg  csp-2.cfg  csp-2h1.cfg  csp-3.cfg  csp-3h1.cfg  csp-4.cfg  csp-4h1.cfg
OpenVibe/configuration/: Readme.txt  channel-selector.cfg  stimulation-based-epoching.cfg  temporal-filter-freq-1h1.cfg  temporal-filter-freq-2.cfg  temporal-filter-freq-2h1.cfg  temporal-filter-freq-3.cfg  temporal-filter-freq-3h1.cfg  temporal-filter-freq-4.cfg  temporal-filter-freq-4h1.cfg  time-based-epoching.cfg
OpenVibe/one_harmonic/: CSP-training.xml  classifier-training-auto.xml  classifier-training.xml  perf-measure.mxs
OpenVibe/results/: Readme.txt
OpenVibe/scripts/: analyze-data.py  analyzeData.py  analyzeData_auto.py  classifier-training-flipswitch.lua  classifier-training-target-separator.lua  configuration-experiment-settings.lua  configuration-peripheral-settings (copy).lua  configuration-peripheral-settings.lua  filterTest.py  python-confusion-matrix.py  stimulation_indexer.lua  threshold-voter.py  training-acquisition-controller.lua
OpenVibe/signals/: Readme.txt  ssvep-record-subject1.ov.REMOVED.git-id
OpenVibe/ssvep-demo/: openvibe-ssvep-demo.conf  trainer.conf
OpenVibe/ssvep_maka/: CSP-training-auto.xml  CSP-training-harm-auto.xml  CSP-training-harm.xml  CSP-training.xml  LDA-OneVsAll-Test.xml  classifier-training-harm-auto.xml  classifier-training-harm.xml  classifier-training-multi.xml  classifier-training.xml  example-experiment-configuration.cfg  example-shooter-configuration.cfg  example-training-configuration.cfg  harmAll.sh  harmAll_auto.sh  online-test-4-stim.mxs  online-test-shooter-3-stim.xml  perf-measure-auto.mxs  perf-measure-base.mxs  perf-measure-harm-auto.mxs  perf-measure-harm.mxs  perf-measure-multi.mxs  perf-measure.mxs  proov.mxs  runAll.sh  ssvep-bci-1-ssvep-configuration.xml  ssvep-bci-2-training-acquisition (copy).xml  ssvep-bci-2-training-acquisition-no-zero.xml  ssvep-bci-2-training-acquisition.xml  ssvep-bci-3-CSP-training.xml  ssvep-bci-4-classifier-training.xml  ssvep-configuration-auto.xml  ssvep-configuration.xml  ssvep-online-test-4-stimulators.mxs  ssvep-perf-measure.mxs  training-acquisition-no-zero.xml  training-acquisition.xml
OpenVibe/ssvep_maka/1electr0-25dur0-5int/: resultsElectrode2  resultsElectrode4
OpenVibe/ssvep_maka/2electr0-25dur0-2int/: 2electr0-25dur0-2int
OpenVibe/ssvep_maka/4electr0-15dur0-05int/: 4electr0-15dur0-05int
ROS/UR5/ur5_path_planning/ur5_moveit/: CMakeLists.txt  package.xml
ROS/UR5/ur5_path_planning/ur5_moveit/include/ur5_moveit/: robot_mover.h
ROS/UR5/ur5_path_planning/ur5_moveit/src/: robot_mover.cpp
ROS/franka_emika_panda/franka_openvibe_move/: CMakeLists.txt  package.xml
ROS/franka_emika_panda/franka_openvibe_move/config/: settings.yaml
ROS/franka_emika_panda/franka_openvibe_move/include/franka_openvibe_move/: readme
ROS/franka_emika_panda/franka_openvibe_move/launch/: franka_control_ed.launch  panda.launch
ROS/franka_emika_panda/franka_openvibe_move/src/: panda_movegroup.cpp
ROS/openvibe_to_ros_tcp/: CMakeLists.txt  package.xml
ROS/ur5/ur5_jog_arm/: CMakeLists.txt  README.md  package.xml
ROS/ur5/ur5_jog_arm/config/: jog_settings.yaml  jog_settings_simu.yaml
ROS/ur5/ur5_jog_arm/launch/: jog_arm.launch  joystick.launch  test_with_joystick.launch  test_with_keyboard.launch
(+287 files in other folders)
